# ROS-Workspace

./: .gitignore  LICENSE.md  README.md  md49_data.txt  md49_defaults.yaml  md49speed.txt  mymap.yaml  serialport.yaml  serialport_defaults.yaml
data/: README.md  index.html  md49data.db  php1.php  php2.php  phpliteadmin.php
data/rosbridge/: base_controller.html  rosbridge_tutorial.html  teleop.html
data/rosbridge/css/: stylesheet.css
hardware_docs/ATMEGA32-Board/TARGET3001_Schaltung/: ATMEGA32_Master.T3000
hardware_docs/MAX232_5V_Modul_Buchse/TARGET3001_Schaltung/: MAX232_Modul - Stand erste Platine.T3000  MAX232_Modul.T3000
hardware_docs/MAX3232_3.3V_Modul_Buchse/: Readme.txt
launch/: joystick_teleop.launch  rosbridge_websocket.launch  startup.launch
scripts/: setuart2  setuart2on.sh
src/arduino_examples/: CMakeLists.txt  package.xml
src/arduino_examples/firmware/: CMakeLists.txt  chatter.cpp  chatter2.cpp
src/arduino_sourcecodes/: CMakeLists.txt  package.xml
src/arduino_sourcecodes/firmware/: CMakeLists.txt  arduino_example_chatter.cpp  arduino_mega1_firmware.cpp  arduino_nano1_firmware.cpp  arduino_nano_example_chatter.cpp
src/base_controller/: CMakeLists.txt  README.md  package.xml
src/base_controller/config/: base_controller_defaults.yaml  joystick_defaults.yaml  md49_defaults.yaml  serialport_defaults.yaml
src/base_controller/doc/: manifest.yaml
src/base_controller/doc/html/: annotated.html  base__controller__node_8cpp.html  base__controller__node_8cpp__incl.map  base__controller__node_8cpp__incl.md5  base__controller__node_8cpp_source.html  classes.html  classmd49-members.html  classmd49.html  connect__arduino__mega1_8py.html  connect__arduino__mega1_8py_source.html  dir_473f882966988d7c7d0618b8dba31c6b.html  dir_473f882966988d7c7d0618b8dba31c6b_dep.map  dir_473f882966988d7c7d0618b8dba31c6b_dep.md5  dir_67d3dc12da29bcba715b493ef8a79d1c.html  dir_67d3dc12da29bcba715b493ef8a79d1c_dep.map  dir_67d3dc12da29bcba715b493ef8a79d1c_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7b2bdb6be64fa3d99376ab5d3408d6e1.html  dir_7b2bdb6be64fa3d99376ab5d3408d6e1_dep.map  dir_7b2bdb6be64fa3d99376ab5d3408d6e1_dep.md5  dir_8af78c62fab5f09bedaa6ddc6d5c7e8d.html  dir_8af78c62fab5f09bedaa6ddc6d5c7e8d_dep.map  dir_8af78c62fab5f09bedaa6ddc6d5c7e8d_dep.md5  dir_eb07d51e4fc42ee8e13f5f0b139a7c73.html  dir_eb07d51e4fc42ee8e13f5f0b139a7c73_dep.map  dir_eb07d51e4fc42ee8e13f5f0b139a7c73_dep.md5  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  joystick__driver__node_8cpp.html  joystick__driver__node_8cpp__incl.map  (+14 more)
src/base_controller/include/base_controller/: base_controller_class.h
src/base_controller/launch/: base_controller.launch  base_controller_local.launch  base_controller_remote.launch  joystick_driver.launch  joystick_teleop.launch
src/base_controller/msg/: encoders.msg  md49data.msg
src/base_controller/src/: base_controlller_node.cpp
src/base_controller/src/arduino_serial_nodes/: connect_arduino_mega1.py
src/base_controller/src/base_controller/: README.md  base_controller_node.cpp
src/base_controller/src/base_controller_2/: base_controller_2_node.cpp  base_controller_2_node.cpp.autosave
src/base_controller/src/cereal_example/: cereal_example_node.cpp
src/base_controller/src/helloworld/: helloworld_node.cpp
src/base_controller/src/joystick_driver/: joystick_driver_node.cpp
src/base_controller/src/md49_console/: md49_console_node.cpp
src/base_controller/src/odometry/: odometry_node.cpp
src/base_controller/src/serial_controller/: serial_controller_node.cpp
src/base_controller/src/sqlite_connector/: sqlite_connector_node.cpp
src/base_odometry/: CMakeLists.txt  package.xml
src/base_odometry/config/: base_odometry_parameters.yaml
src/base_odometry/launch/: base_odometry.launch
src/custom_messages/: CMakeLists.txt  package.xml
src/interactive_marker_twist_server/launch/: interactive_markers.launch
src/interactive_marker_twist_server/src/: marker_server.cpp
src/joystick_driver/: CMakeLists.txt  package.xml
src/joystick_driver/launch/: joystick_driver.launch  joystick_teleop.launch
src/md49_messages/: CMakeLists.txt  package.xml
src/md49_serialport/: CMakeLists.txt  package.xml
src/mymap/: mymap.yaml  package.xml
src/mymap/launch/: mymap.launch
src/mymap/mymap/: CMakeLists.txt
src/robot_2dnav/: CMakeLists.txt  package.xml
src/robot_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/robot_2dnav/launch/: amcl_diff.launch  move_base.launch  navigation.launch  robot_configuration.launch
src/robot_2dnav/src/: example_simple_navigation_goals.cpp  laser.cpp
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/launch/: robot_gazebo.launch
src/robot_gazebo/urdf/: robot.urdf.xacro  wheel.urdf.xacro
src/robot_kinect/: CMakeLists.txt  package.xml
src/robot_kinect/launch/: depthimage_to_laserscan.launch  depthimage_to_laserscan_nodelet.launch  freenect.launch  kinect_remote.launch
src/robot_maps/: CMakeLists.txt  package.xml
src/robot_maps/launch/: empty_map.launch
src/robot_slam/: CMakeLists.txt  package.xml
src/robot_teleop/: CMakeLists.txt  package.xml
src/robot_urdf/: CMakeLists.txt  package.xml  urdf.rviz
src/serialport/: CMakeLists.txt  README.md  package.xml
src/serialport/include/serialport/: serialport.h
src/serialport/src/: example.cpp  serialport.cpp
src/sqlite_connector/: CMakeLists.txt  package.xml
webserver_data/: Aufbau.html  Grundlagen.html  README.md  Toolchain.html  index.html  md49data.db  version.php
webserver_data/News/: News.sqlite3  manage.py
webserver_data/Projektdokumentation/: index.html
webserver_data/Webtools/: index.html
webserver_data/css/: stylesheet.css
webserver_data/rosbridge/: base_controller.html  rosbridge_tutorial.html  teleop.html
(+37 files in other folders)
