<?xml version="1.0"?>
<package>
  <name>custom_messages</name>
  <version>0.1.0</version>
  <description>The custom_messages package</description>

  <maintainer email="scheik.todeswache@googlemail.com">Fabian</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>